@@ -3,6 +3,7 @@
 = 6.1.0 - 2022-xx-xx =
 * Tweak - Use the newly exposed LoadableMask component provided by WooCommerce Blocks to trigger the loading state for Payment Request Buttons.
 * Fix - Response type for account summary API.
+* Fix - Invalid response in account summary API when missing account data.
 * Add - Live and test mode information in account summary API.
 
 = 6.0.0 - 2022-01-05 =
